@@ -1,0 +1,10 @@
+<h3>About phpVMS</h3>
+<p>phpVMS and the lightframe framework is developed by Nabeel Shahzad.<br />
+
+<a href="http://www.phpvms.net">phpVMS Homepage</a><br />
+<a href="http://www.phpvms.net/docs">phpVMS Documentation</a><br />
+<a href="http://www.phpvms.net/forum">phpVMS Forum and Support</a><br />
+</p>
+
+<p>By using this software, you agree to the license terms posted on: 
+<a href="http://www.phpvms.net/docs/license">http://www.phpvms.net/docs/license</a></p>
