@@ -27,6 +27,7 @@
 	<ul>
 		<li><a href="?admin=settings">General Settings</a></li>
 		<li><a href="?admin=customfields">Custom Profile Fields</a></li>
+		<li><a href="?admin=about">About phpVMS</a></li>
 	</ul>
 </li>
 <?=$MODULE_NAV_INC;?>
